# strategy-ecology

./: .gitignore  AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
src/: ecology.rs  lib.rs  population.rs  species.rs  transfer.rs
tests/: integration.rs
